[gd_scene load_steps=5 format=3 uid="uid://cq23qum6iti3g"]

[ext_resource type="Script" uid="uid://ikgwg78pdgtb" path="res://addons/curved_lines_2d/examples/butterfly_net/butterfly_net_tester.gd" id="1_nlbvm"]
[ext_resource type="PackedScene" uid="uid://d1rblgnrwp0bp" path="res://addons/curved_lines_2d/examples/butterfly_net/butterfly_net.tscn" id="2_e8uau"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_grxhv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uqnbo"]

[node name="ButterflyNetTester" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nlbvm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = " Rotate Counter Clockwise <= "

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_grxhv")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_uqnbo")
min_value = -5.0
max_value = 5.0
step = 2.5
tick_count = 3

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = " => Rotate Clockwise"

[node name="CheckButton" type="CheckButton" parent="HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "<=> flip"

[node name="ButterflyNet" parent="." instance=ExtResource("2_e8uau")]
position = Vector2(647, 398)

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
